Name:               zxcvbn
Version:            0.1
Synopsis:           Password strength scoring library
Description:
  A password strength calculation library, based on Dan Wheeler's original zxcvbn
  Javascript code.
  Mainly a playground for me to try out Haskell for now.
Author:             Luke Taylor
Build-Type:         Simple
Cabal-Version:      >= 1.12

Library
  Default-Language:  Haskell2010
  Exposed-modules:  Zxcvbn, Entropy, Token
  Other-Extensions: DoAndIfThenElse

  Build-Depends:    base >= 4,
                    containers >= 0.4,
                    vector >= 0.10

  --Other-modules:    Entropy

Executable zxcvbn
  Default-Language:  Haskell2010
  Main-is:          Main.hs
  Build-depends:    zxcvbn,
                    base >= 4,
                    containers >= 0.4,
                    vector >= 0.10

Test-suite tests
  Default-Language:  Haskell2010
  Type:            exitcode-stdio-1.0
  Other-Modules:   ZxcvbnSpec
  Build-depends:   zxcvbn,
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   hspec >= 1.5,
                   tasty >= 0.4.1,
                   tasty-smallcheck >= 0.2,
                   tasty-hunit >= 0.4,
                   smallcheck >= 1.1,
                   vector >= 0.10
  Ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:  tests
  Main-is:         tests.hs

